# flix-api

./: .flake8  docker-compose.yml  pyproject.toml
actors/: admin.py  models.py  urls.py  views.py
actors/migrations/: 0001_initial.py
authentication/: tests.py  urls.py
contrib/: env-sample
core/: settings.py  urls.py
genres/: admin.py  models.py  serializers.py  urls.py  views.py  views_fucntion.py
genres/migrations/: 0001_initial.py  0002_rename_genres_genre.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_movie_resume.py  0003_alter_movie_resume.py
reviews/: models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
