[tool.poetry]
name = "flix-api"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
flake8 = "^6.1.0"
setuptools = "^69.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
